# ros2_web_interface

./: README.md  package.xml  setup.cfg  setup.py
ros2_web_interface/: config.yaml  main.py  models.py
ros2_web_interface/api/: action_routes.py  registry.py  service_routes.py  system_routes.py  topic_routes.py
ros2_web_interface/ros/: action.py  base.py  factory.py  service.py  system.py  topic.py
test/: conftest.py  params.yaml  test_conftest.py  test_get_data.py  test_get_image.py  test_publishers.py
