<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_web_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <!-- ROS dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>

  <!-- Pip dependencies via rosdep -->
  <exec_depend>python3-pip</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-uvicorn</exec_depend>
  <exec_depend>python3-fastapi</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>python3-requests</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
